// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render DateTimeValue 1`] = `
<div>
  <span
    class=""
    data-testid="date-time-value"
  >
    2017-03-13 00:00:00
  </span>
</div>
`;

exports[`render DateTimeValue 2`] = `
<div>
  <span
    class=""
    data-testid="date-value"
  >
    2017-03-13
  </span>
</div>
`;

exports[`render HumanizedDateTime 1`] = `
<div>
  <div
    data-testid="humanized-date-time"
  >
    <span
      class=""
      data-testid="date-time-value"
    >
      -
    </span>
    <div
      class="humanized"
      data-testid="humanized"
    >
      a few seconds ago
    </div>
  </div>
</div>
`;
